0.96

        Remove --stdin option, because manual testing could be done
        with a shell redirection.

        Provide RedHat-style checkpassword-pam.spec (courtesy
        sysadmin(at)sunet.com.au)

        Add PAM session patch from http://www.pjwstk.edu.pl/~bartek/

        Set $USER, $HOME, and $SHELL environment variables, to conform
        to checkpassword interface more strictly.  Patch from Stefan
        Aeschbacher.

        Fix Solaris compilation wrt to LOG_AUTHPRIV.

0.95
        Initial version.