@@ -4,7 +4,7 @@
 checkpassword-pam \- PAM-based checkpassword compatible authentication
 .SH SYNOPSIS
 .PP
-checkpassword-pam [-s PAM-SERVICE] -- \fIprog args...\fP
+checkpassword-pam [-s PAM-SERVICE] [-e|--noenv] -- \fIprog args...\fP
 .PP
 checkpassword-pam --help
 .PP
@@ -35,7 +35,9 @@ environment variable, or by the
 command-line option.
 
 .PP
-After successful authentication
+After successful authentication, if
+.I --noenv
+option is not specified,
 .B checkpassword-pam
 sets up supplementary groups of authenticated user,
 its gid,
@@ -44,7 +46,7 @@ and its working directory (those values are taken from the system
 user database).
 
 .PP
-After setting up the process environment,
+Finally,
 .B checkpassword-pam
 executes
 .I prog
@@ -87,7 +89,10 @@ Before invoking
 .B checkpassword-pam
 sets environment variables
 .BR USER ", " HOME ", and " SHELL
-to appropriate values.
+to appropriate values.  If
+.I --noenv
+option is specified, this step is skipped and the variables are left
+alone.
 
 
 .SH "DEBUGGING"
