@@ -30,14 +30,16 @@
 
 /* command line options processing */
 int opt_debugging = 0;
+int opt_dont_set_env = 0;
 int opt_use_stdout = 0;
 
-static const char* short_options = "dhs:V";
+static const char* short_options = "dehs:V";
 
 enum { OPT_STDOUT = 1 };
 static struct option long_options[] = {
     { "debug", no_argument, NULL, 'd' },
     { "help", no_argument, NULL, 'h' },
+    { "noenv", no_argument, NULL, 'e' },
     { "service", required_argument, NULL, 's' },
     { "stdout", no_argument, NULL, OPT_STDOUT },
     { "version", no_argument, NULL, 'V' },
@@ -53,6 +55,7 @@ const char* usage =
 "\n"
 "Options are:\n"
 "  -d, --debug\t\tturn on debugging output\n"
+"  -e, --noenv\t\tdo not set uid, gid, environment variables, \n\t\t\tand home directory\n"
 "  -h, --help\t\tdisplay this help and exit\n"
 "  -s, --service=SERVICE\tspecify PAM service name to use\n"
 "\t\t\t(by default use the contents of $PAM_SERVICE)\n"
@@ -95,6 +98,10 @@ main (int argc, char *argv[])
 
 	case 'd':
 	    opt_debugging = 1;
+	    break;
+
+	case 'e':
+	    opt_dont_set_env = 1;
 	    break;
 	    
 	case 'h':
@@ -177,6 +184,9 @@ main (int argc, char *argv[])
     if (exit_status != 0)
 	goto out;
 
+    if (!opt_dont_set_env)
+      goto execute_program; /* skip setting up process environment */
+
     /* switch to proper uid/gid/groups */
     pw = getpwnam(username);
     if (!pw) {
@@ -234,6 +244,8 @@ main (int argc, char *argv[])
 	exit_status = 111;
 	goto out;
     }
+
+ execute_program:
 
     /* execute the program, if any */
     if (optind < argc) {
